# simulatron

./: .gitignore  README.md
Crates/: Cargo.toml
Crates/simulatron-salt/: Cargo.toml  README.md
Crates/simulatron-salt/ast-sourcegen/: Cargo.toml  lib.rs
Crates/simulatron-salt/examples/: addressing-modes.simasm  arithmetic-bad.simasm  array-bad.simasm  array-inferred.simasm  bitwise-bad.simasm  bitwise.simasm  blockcopy-bad.simasm  char-literal.simasm  comments.simasm  consts-only.simasm  convert.simasm  copy.simasm  first-line-bad.simasm  hello-world.simasm  instruction-block.simasm  numeric-literals.simasm  push-pop.simasm  string-literal.simasm
Crates/simulatron-salt/src/cli/: main.rs
Crates/simulatron-salt/src/lib/: ast.rs  codegen.rs  language.rs  lexer.rs  lib.rs  parser.rs  tests.rs
Crates/simulatron-silk/: Cargo.toml  README.md
Crates/simulatron-silk/examples/: big.simobj  invalid-name.simobj  invalid-symbol-type.simobj  minimal.simobj  multi-symbol.simobj  null-section.simobj  sym-ref-too-big.simobj  sym-ref-too-small.simobj  sym-val-too-small.simobj  zero-length-name.simobj
Crates/simulatron-silk/src/cli/: main.rs
Crates/simulatron-silk/src/lib/: data.rs  error.rs  lib.rs  linker.rs  parser.rs  tests.rs
Crates/simulatron-vm/: Cargo.toml  README.md
Crates/simulatron-vm/src/cli/: main.rs
Crates/simulatron-vm/src/lib/: cpu.rs  disk.rs  display.rs  keyboard.rs  lib.rs  mmu.rs  ram.rs  ui.rs
simulatron/: Cargo.toml  README.md
simulatron-salt/: Cargo.toml  README.md
simulatron-salt/ast-gen/: Cargo.toml  lib.rs
simulatron-salt/examples/: addressing-modes-2.simasm  arithmetic.simasm  array-literals.simasm  bad-tokens.simasm  bitwise-bad.simasm  blockcopy-bad.simasm  blockcopy.simasm  blockset-bad.simasm  blockset.simasm  branching-bad-2.simasm  branching-bad.simasm  branching.simasm  comments-only.simasm  consts-only.simasm  convert-bad.simasm  copy-bad.simasm  external-refs.simasm  hello-world.simasm  literal-ranges.simasm  naming-violations.simasm  negate.simasm  publics.simasm  push-pop-bad.simasm  statics-only.simasm  store.simasm  swap.simasm
simulatron-salt/src/cli/: main.rs
simulatron-salt/src/lib/: ast.rs  codegen.rs  error.rs  language.rs  lexer.rs  lib.rs  parser.rs  tests.rs  write_be.rs
simulatron-salt/src/lib/codegen/: instruction_macros.rs  macros.rs
simulatron-salt/src/lib/parser/: node_builder.rs
simulatron-salt/src/lib/snapshots/: simulatron_salt__ast__tests__data-14.snap  simulatron_salt__ast__tests__data-15.snap  simulatron_salt__ast__tests__data-16.snap  simulatron_salt__ast__tests__data-2.snap  simulatron_salt__ast__tests__data-3.snap  simulatron_salt__ast__tests__data-4.snap  simulatron_salt__ast__tests__data-7.snap  simulatron_salt__ast__tests__instructions-2.snap  simulatron_salt__ast__tests__instructions-3.snap  simulatron_salt__ast__tests__instructions-4.snap  simulatron_salt__ast__tests__instructions-5.snap  simulatron_salt__ast__tests__instructions.snap  simulatron_salt__lexer__tests__bad_tokens.snap  simulatron_salt__lexer__tests__char_literal.snap  simulatron_salt__lexer__tests__comments.snap  simulatron_salt__lexer__tests__hello_world.snap  simulatron_salt__lexer__tests__instruction_block.snap  simulatron_salt__lexer__tests__minimal.snap  simulatron_salt__lexer__tests__pub.snap  simulatron_salt__lexer__tests__string_literal.snap  simulatron_salt__parser__tests__arrays.snap  simulatron_salt__parser__tests__bad_tokens-2.snap  simulatron_salt__parser__tests__bad_tokens.snap  simulatron_salt__parser__tests__char_literals.snap  simulatron_salt__parser__tests__comments-2.snap  simulatron_salt__parser__tests__comments.snap  simulatron_salt__parser__tests__consts.snap  simulatron_salt__parser__tests__empty.snap  simulatron_salt__parser__tests__error_recovery.snap  simulatron_salt__parser__tests__hello_world.snap  simulatron_salt__parser__tests__instruction_block.snap  simulatron_salt__parser__tests__minimal.snap  simulatron_salt__parser__tests__numeric_literals.snap  simulatron_salt__parser__tests__publics.snap  simulatron_salt__parser__tests__statics.snap  simulatron_salt__parser__tests__strings.snap  simulatron_salt__tests__addressing_modes-2.snap  simulatron_salt__tests__addressing_modes.snap  (+14 more)
simulatron-silk/: Cargo.toml  README.md
simulatron-silk/examples/: bad-reference.simobj  big.simobj  external-symbol.simobj  internal-foobaz.simobj  invalid-symbol-type.simobj  minimal.simobj  multi-section-with-gaps.simobj  multi-section.simobj  multi-symbol.simobj  no-entrypoint.simobj  no-sections.simobj  non-exec-entrypoint.simobj  null-section.simobj  really-invalid-name.simobj  single-symbol.simobj  sym-val-too-big.simobj  too-small.simobj  writable-section.simobj  zero-length-name.simobj
simulatron-silk/src/: data.rs  error.rs  lib.rs  linker.rs  parser.rs  tests.rs
simulatron-silk/src/cli/: error.rs  file_utils.rs  main.rs
simulatron-silk/src/lib/: data.rs  lib.rs  parser.rs  read_be.rs  tests.rs
simulatron-silk/src/snapshots/: simulatron_silk__tests__combine_external.snap  simulatron_silk__tests__combine_external_internal.snap  simulatron_silk__tests__combine_external_reversed.snap  simulatron_silk__tests__combine_internal.snap  simulatron_silk__tests__combine_public_internal.snap  simulatron_silk__tests__minimal.snap  simulatron_silk__tests__multi_section.snap  simulatron_silk__tests__multi_section_link.snap  simulatron_silk__tests__multi_symbol.snap  simulatron_silk__tests__multi_symbol_link.snap  simulatron_silk__tests__single_symbol.snap  simulatron_silk__tests__single_symbol_link.snap  simulatron_silk__tests__writable.snap
simulatron/docs/: character-set.md  instruction-set.md  memory-management.md  memory-mapping.md  raw-instruction-table.ods
simulatron/src/: char_mapping.rs  cpu.rs  disk.rs  display.rs  index.html  keyboard.rs  lib.rs  main.rs  mmu.rs  ram.rs  rom.rs  terminal.css  terminal.html  terminal.js  ui.rs
simulatron/src/cpu/: macros.rs  rotcarry.rs  tests.rs
simulatron/src/disk/: disk_interface.rs  disk_memory.rs  disk_real.rs  mod.rs
simulatron/src/ram/: ram_lazy.rs
(+111 files in other folders)
