[package]
name = "simulatron-salt"
description = "Simulatron Assembly Language Translator: assembler for Simulatron."
version = "2.0.0-alpha"
authors = ["Chris Riches <chrisriches42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
