[package]
name = "simulatron-salt"
description = "Simulatron Assembly Language Translator: assembler for Simulatron."
version = "2.0.0-alpha"
authors = ["Chris Riches <chrisriches42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "simulatron_salt"
path = "src/lib/lib.rs"

[[bin]]
name = "salt"
path = "src/cli/main.rs"

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
logos = "0.12.0"
rowan = "0.13.2"
static_assertions = "1.1.0"

[dev-dependencies]
insta = "1.7.2"
