[package]
name = "simulatron-silk"
description = "SImulatron LinKer: object code linker for Simulatron."
version = "2.0.0-alpha"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "silk"
path = "src/cli/main.rs"

[dependencies]
clap = "2.33.3"
env_logger = "0.9.0"
itertools = "0.10.1"
log = "0.4.14"

[dev-dependencies]
insta = "1.7.2"
