[package]
name = "simulatron"
version = "2.0.0-alpha"
authors = ["Chris Riches <chrisriches42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "5.0.0-pre.2"
serde_json = "1.0.51"
web-view = "0.6.2"

[dev-dependencies]
rand = "0.7.3"
tempfile = "3.1.0"
