[package]
name = "simulatron"
description = "Simulatron Virtual Machine"
version = "2.0.0-alpha"
authors = ["Chris Riches <chrisriches42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
lazy-ram = ["ahash"]

[dependencies]
ahash = { version = "0.7.4", optional = true }
notify = "5.0.0-pre.12"
serde_json = "1.0.59"
web-view = "0.7.3"

[dev-dependencies]
ntest="0.7.3"
rand = "0.8.4"
tempfile = "3.2.0"
