[package]
name = "simulatron"
description = "Simulatron Virtual Machine"
version = "2.0.0-alpha"
authors = ["Chris Riches <chrisriches42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
lazy-ram = ["ahash"]

[dependencies]
ahash = { version = "0.7.4", optional = true }
crossterm = "0.21.0"
log = "0.4.14"
notify = "5.0.0-pre.12"

[dev-dependencies]
ntest="0.7.3"
rand = "0.8.4"
tempfile = "3.2.0"
