[package]
name = "simulatron-salt"
version = "2.0.0-beta"
authors = ["Chris Riches <chrisriches42@gmail.com>"]
edition = "2021"
description = "Simulatron Assembly Language Translator: assembler for Simulatron."
readme = "README.md"
repository = "https://github.com/cjriches/simulatron"
license = "MIT"

[lib]
name = "simulatron_salt"
path = "src/lib/lib.rs"

[[bin]]
name = "salt"
path = "src/cli/main.rs"

[dependencies]
ast-sourcegen = { path = "ast-sourcegen" }
clap = { version = "4.0.10", features = ["cargo", "wrap_help"] }
colored = "2.0.0"
env_logger = "0.9.1"
itertools = "0.10.5"
log = "0.4.17"
logos = "0.12.1"
rowan = "0.15.10"
simulatron-utils = { path = "../simulatron-utils" }

[dev-dependencies]
insta = "1.21.0"
