[package]
name = "simulatron-silk"
version = "2.0.0-beta"
authors = ["Chris Riches <chrisriches42@gmail.com>"]
edition = "2021"
description = "SImulatron LinKer: object code linker for Simulatron."
readme = "README.md"
repository = "https://github.com/cjriches/simulatron"
license = "MIT"

[lib]
name = "simulatron_silk"
path = "src/lib/lib.rs"

[[bin]]
name = "silk"
path = "src/cli/main.rs"

[dependencies]
clap = "2.33.3"
env_logger = "0.9.0"
itertools = "0.10.1"
log = "0.4.14"
simulatron-utils = { path = "../simulatron-utils" }

[dev-dependencies]
insta = "1.7.2"
tempfile = "3.2.0"
