[package]
name = "simulatron-silk"
version = "2.0.0"
authors = ["Chris Riches <chrisriches42@gmail.com>"]
edition = "2021"
description = "SImulatron LinKer: object code linker for Simulatron."
readme = "README.md"
repository = "https://github.com/cjriches/simulatron"
license = "MIT"

[lib]
name = "simulatron_silk"
path = "src/lib/lib.rs"

[[bin]]
name = "silk"
path = "src/cli/main.rs"

[dependencies]
clap = { version = "4.0.10", features = ["cargo", "derive", "wrap_help"] }
env_logger = "0.9.1"
itertools = "0.10.5"
log = "0.4.17"
simulatron-utils = { path = "../simulatron-utils" }

[dev-dependencies]
insta = "1.21.0"
tempfile = "3.3.0"
