[package]
name = "simulatron-vm"
description = "Simulatron Virtual Machine"
version = "2.0.0-beta"
authors = ["Chris Riches <chrisriches42@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "simulatron_vm"
path = "src/lib/lib.rs"

[[bin]]
name = "simulatron"
path = "src/cli/main.rs"

[features]
lazy-ram = ["ahash"]

[dependencies]
ahash = { version = "0.7.4", optional = true }
clap = "2.33.3"
crossterm = "0.21.0"
log = "0.4.14"
notify = "=5.0.0-pre.13"  # Since this is a pre-release, pin the exact version.
simplelog = { version = "0.10.0", features = ["test"] }

[dev-dependencies]
ntest="0.7.3"
rand = "0.8.4"
tempfile = "3.2.0"
