[package]
name = "simulatron-vm"
version = "2.0.0"
authors = ["Chris Riches <chrisriches42@gmail.com>"]
edition = "2021"
description = "The Simulatron Virtual Machine"
readme = "README.md"
repository = "https://github.com/cjriches/simulatron"
license = "MIT"

[lib]
name = "simulatron_vm"
path = "src/lib/lib.rs"

[[bin]]
name = "simulatron"
path = "src/cli/main.rs"

[features]
lazy-ram = ["ahash"]

[dependencies]
ahash = { version = "0.8.0", optional = true }
clap = { version = "4.0.10", features = ["cargo", "derive", "wrap_help"] }
crossterm = "0.25.0"
log = "0.4.17"
notify = "5.0.0"
simplelog = { version = "0.12.0", features = ["test"] }
time = "0.3.15"

[dev-dependencies]
ntest= "0.8.1"
rand = "0.8.4"
tempfile = "3.2.0"
