[package]
name = "ast-sourcegen"
version = "2.0.0-alpha"
authors = ["Chris Riches <chrisriches42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
quote = "1.0.9"
syn = "1.0.76"
