[package]
name = "ast-sourcegen"
version = "2.0.0-beta"
authors = ["Chris Riches <chrisriches42@gmail.com>"]
edition = "2021"
description = "Procedural macros for simulatron-salt"
repository = "https://github.com/cjriches/simulatron"
license = "MIT"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
quote = "1.0.9"
syn = "1.0.76"
